--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* styles.css */
 /* Additional styles for the cover page */
 #cover {
-    background-image: url('your-cover-image.jpg'); /* Replace 'your-cover-image.jpg' with the path to your cover image */
+    background-image: url('assets/IMG_0771_Original.jpeg'); /* Replace 'your-cover-image.jpg' with the path to your cover image */
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -81,7 +81,7 @@ footer {
     text-align: center;
 }
 section img {
-    max-width: 100%;
+    max-width: 30%;
     height: auto;
     border-radius: 10px; /* Optional: Add border radius to images */
     margin-bottom: 20px;
@@ -96,3 +96,43 @@ section img {
         margin: 10px 0;
     }
 }
+
+.bubble-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .bubble {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #007bff;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  
+  .bubble:hover {
+    transform: scale(1.1);
+  }
+  
+  .machine-learning {
+    background-color: #28a745;
+  }
+  
+  .data-analytics {
+    background-color: #ffc107;
+  }
+  
+  .data-visualization {
+    background-color: #dc3545;
+  }
+  
+  .contests {
+    background-color: #17a2b8;
+  }
+  
